# catch-analysis-tools

./: .dockerignore  .env-template  .gitignore  .pre-commit-config.yaml  65P_atlas_haleakela.fits  65P_atlas_haleakela.wcs  Dockerfile  MANIFEST.in  README.md  _build_container  _ping_astrometry  _ping_health  _ping_hello  _ping_logs  _push_ecr_image  _test_local  docker-compose.yml  env-template  pyproject.toml  requirements.local.txt  tf_main.tf  tf_outputs.tf  tf_variables.tf
catch_analysis_tools/: 103P_atlas_mauna_loa.fits  103P_atlas_mauna_loa.wcs  astrometry.py  background.py  cat.db  movingstack.py  photometry.py
catch_analysis_tools/app/: __init__.py  app.py
catch_analysis_tools/app/api/: openapi.yaml
catch_analysis_tools/app/astrometry_readiness/: _README.md  __init__.py  acquire_index_download_lock.py  background_prepare_astrometry_data.py  constants.py  count_complete_index_files.py  download_index_files.py  get_astrometry_readiness_status.py  get_current_time.py  get_index_dir.py  get_lock_path.py  get_remote_index_files.py  get_sentinel_path.py  index_files_complete.py  is_astrometry_ready.py  prepare_astrometry_data.py  set_astrometry_readiness_status.py  start_astrometry_background_check.py  state.py  write_ready_sentinel.py
catch_analysis_tools/app/handlers/: __init__.py  astrometry.py  health.py  hello.py  reset.py
catch_analysis_tools/app/services/: astrometry.py  astrometry_data.py  health.py  photometry.py  subtract_median_background.py
catch_analysis_tools/calibration/: astrometry.py  photometry.py
catch_analysis_tools/tests/: astrometry_test.py  background_test.py  photometry_test.py
catch_photometry/: photometry.py
catch_photometry/tests/: photometry_test.py
docker/: Dockerfile.local  astrometry.cfg  entrypoint.sh
scripts/: Checking_indexfiles.py
