[project]
name = "catch_photometry"
description = "A package to support photometry analysis tools within the CATCH interface"
readme = "README.md"
authors = [
    { name = "Ben Sharkey", email = "sharkey@umd.edu" },
    { name = "Michael Kelley", email = "msk@astro.umd.edu"}, 
    { name = "Yaeji Kim", email = "ykim1231@umd.edu"}
]
license = { text = "BSD 3-Clause License" }
dependencies = [
    "numpy",
    "astropy>=3.2",
    "photutils",
    "scipy",
]
dynamic = ["version"]

[project.urls]
homepage = "https://catch.astro.umd.edu/"

[tool.setuptools_scm]
write_to = "catch_photometry/version.py"
