[project]
name = "catch_analysis_tools"
description = "A package to support analysis tools within the CATCH interface"
readme = "README.md"
authors = [
    { name = "Ben Sharkey", email = "sharkey@umd.edu" },
    { name = "Michael Kelley", email = "msk@astro.umd.edu" },
    { name = "Yaeji Kim", email = "ykim1231@umd.edu" },
    { name = "John Dailey", email = "dailey@umd.edu" },
]
license = "BSD-3-Clause"
dependencies = [
    "numpy>=2.0",
    "astropy>=6.1",
    "photutils",
    "scipy",
    "matplotlib",
    "scikit-image",
    "pandas>=3.0",
    "sep",
    "fitsio",
    "calviacat",
    "mastcasjobs",
    "beautifulsoup4",
    "connexion[flask,swagger-ui,uvicorn]>=3.3.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = ["build", "pre-commit", "ruff"]
test = ["pytest", "pytest-remotedata", "pytest-cov", "tox"]

[project.urls]
homepage = "https://catch.astro.umd.edu/"

[build-system]
requires = ["setuptools>=80", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["catch_analysis_tools"]

[tool.setuptools_scm]
write_to = "catch_analysis_tools/version.py"

[tool.ruff]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes. "E" + "W" + "F" + "C90" (mccabe complexity) is equivalent to flake8
    "I", # isort
]

[tool.pytest.ini_options]
addopts = "--cov=catch_analysis_tools --cov-report=term-missing"
markers = [
    "integration: tests that run solve-field and require astrometry.net index files",
]
